src/test/ui/resolve/issue-23305.stderr
error[E0411]: use of `Self` outside of an impl or trait
  --> $DIR/issue-23305.rs:15:12
   |
15 | impl ToNbt<Self> {}
   |            ^^^^ used outside of impl or trait

error[E0038]: the trait `ToNbt` cannot be made into an object
  --> $DIR/issue-23305.rs:15:6
   |
15 | impl ToNbt<Self> {}
   |      ^^^^^^^^^^^ the trait `ToNbt` cannot be made into an object
   |
   = note: method `new` has no receiver

error: aborting due to previous error

